<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".CultivationTechnique">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:title="Cultivation Techniques"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/crop_diversity"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique1"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/soil"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique2"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/weed_management"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique3"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/controling"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique4"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/livestock"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique5"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:id="@+id/tech6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/genetic_modification"
                        android:onClick="techniqueClicked"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/technique6"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>
</LinearLayout>