<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/WeatherApp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="#0097A7"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/card_1_text"
                    android:textColor="#ffffff"
                    android:textSize="35sp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/organic" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_2_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/crop_insurance"
                        android:onClick="cropInsurance"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_3_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/farmer_helpline"
                        android:onClick="helplineCenter"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_4_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/commodity_rates"
                        android:onClick="commoditiesRate"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_5_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/crop_protection"
                        android:onClick="cropProtection"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_6_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/farmer_chat" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_7_text"
                        android:textColor="#ffffff"
                        android:layout_gravity="bottom"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:background="#7C000000"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>